# benchmark-app

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/app/benchmarkapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/cpp/: BenchmarkBase.cpp  CMakeLists.txt  MultiThreadedBenchmark.cpp  RamBenchmark.cpp  SingleThreadedBenchmark.cpp  StorageBenchmark.cpp  benchmarks.cpp  cpu_benchmark.cpp  cpu_multi_threaded_benchmark.cpp  cpu_single_threaded_benchmark.cpp  multi_threaded.cpp  ram_benchmark.cpp  single_threaded.cpp
app/src/main/cpp/include/: BenchmarkBase.h  MultiThreadedBenchmark.h  RamBenchmark.h  SingleThreadedBenchmark.h  StorageBenchmark.h
app/src/main/java/app/benchmarkapp/: DeviceInfoProvider.kt  DeviceStats.kt  FirebaseHelper.kt  MainActivity.kt  Renderer.kt  Util.kt
app/src/main/java/app/benchmarkapp/graphics/: Mesh.kt  Model3D.kt  ObjLoader.kt  Renderer.kt  Shader.kt
app/src/main/java/app/benchmarkapp/ui/components/: BatteryInfoWidget.kt  CircularProgress.kt  CpuBenchmarkWidget.kt  CpuInfoWidget.kt  DeviceInfoWidget.kt  GpuBenchmarkWidget.kt  GpuInfoWidget.kt  HomeWidget.kt  MemoryInfoWidget.kt  RamBenchmarkWidget.kt  SideMenu.kt  SpecsWidget.kt  TitleBar.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/app/benchmarkapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
